--- a/dotnet-core-hello-world.csproj
+++ b/dotnet-core-hello-world.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <DebugType>portable</DebugType>
     <AssemblyName>dotnet-core-hello-world</AssemblyName>
     <OutputType>Exe</OutputType>
@@ -9,8 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="2.2.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.*" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.2.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="2.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="5.0.*" />
   </ItemGroup>
+
 </Project>
