--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,4 +6,4 @@ phases:
       - unzip packer_1.7.5_linux_amd64.zip
   build:
     commands:
-      - ./packer build windows-ami.json
+      - ./packer build windows-ami.hcl
