--- a/buildspec-update-AMI.yml
+++ b/buildspec-update-AMI.yml
@@ -7,9 +7,19 @@ phases:
       - echo "===========================Image ID" $ami_id
       - |
         aws ec2 create-launch-template-version \
-          --launch-template-id lt-062a7e184874af46e \
+          --launch-template-id lt-0a83af663c750b036 \
           --version-description "Updated AMI version" \
           --source-version 1 \
           --launch-template-data "{\"ImageId\": \"$ami_id\"}"
-      - new_version_number=$(aws ec2 describe-launch-template-versions --launch-template-id lt-062a7e184874af46e --query 'sort_by(LaunchTemplateVersions, &VersionNumber)[-1].VersionNumber' --output text)
-      - aws ec2 modify-launch-template --launch-template-id lt-062a7e184874af46e --default-version $new_version_number
+      - new_version_number=$(aws ec2 describe-launch-template-versions --launch-template-id lt-0a83af663c750b036 --query 'sort_by(LaunchTemplateVersions, &VersionNumber)[-1].VersionNumber' --output text)
+      - aws ec2 modify-launch-template --launch-template-id lt-0a83af663c750b036 --default-version $new_version_number
+
+      # Step 1: Get the latest version of the launch template
+      - latest_version=$(aws ec2 describe-launch-template-versions --launch-template-id lt-0a83af663c750b036 \
+                   --query 'sort_by(LaunchTemplateVersions, &VersionNumber)[-1].VersionNumber' \
+                   --output text)
+
+      # Step 2: Update the Auto Scaling Group with the new launch template version
+      - aws autoscaling update-auto-scaling-group \
+        --auto-scaling-group-name pws-asg-poc \
+        --launch-template "LaunchTemplateId=lt-0a83af663c750b036,Version=$latest_version"
